Workflows updated and expanded.

--- a/.github/workflows/dev-checks.yml
+++ b/.github/workflows/dev-checks.yml
@@ -1,51 +1,48 @@
 name: Dev Checks
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  schedule:
-    - cron: '30 3 * * *'  # Daily at 3:30 AM UTC
+    push:
+        branches: [ main ]
+    pull_request:
+        branches: [ main ]
 
 jobs:
-  dev-check:
-    runs-on: ubuntu-latest
+    lint-test:
+        name: Lint, Type Check, Format
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+        steps:
+            -   name: Checkout Code
+                uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+            -   name: Set up Python
+                uses: actions/setup-python@v5
+                with:
+                    python-version: '3.12'
 
-      - name: Install dev dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements-dev.txt
+            -   name: Install dependencies
+                run: |
+                    python -m pip install --upgrade pip
+                    pip install -r requirements.txt
+                    pip install \
+                      black \
+                      isort \
+                      flake8 \
+                      mypy \
+                      bandit \
+                      types-requests
 
-      - name: Run formatter (black)
-        run: black --check ledgerbase
+            -   name: Run Black
+                run: black --check --config setup.cfg .
 
-      - name: Run linter (flake8)
-        run: flake8 ledgerbase
+            -   name: Run isort
+                run: isort --check-only --settings-path setup.cfg .
 
-      - name: Run flake8 with reviewdog
-        uses: reviewdog/action-flake8@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-review
-          level: warning
-          fail_on_error: false
+            -   name: Run flake8
+                run: flake8 --config=setup.cfg .
 
-      - name: Run tests with coverage
-        run: |
-          pytest --cov=ledgerbase --cov-report=xml
+            -   name: Run mypy
+                run: mypy --config-file setup.cfg .
 
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          fail_ci_if_error: false
+            -   name: Run Bandit (security linter)
+                run: bandit -r . -x tests --skip B101
