--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,16 @@
 root = true
 
 [*]
-charset = utf-8
 indent_style = space
 indent_size = 4
 end_of_line = lf
-insert_final_newline = true
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 88 # Use 88 for black, or 79 for flake8 strict
+
+[*.md]
+trim_trailing_whitespace = false
 
 [*.py]
 max_line_length = 88
