--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
         hooks:
             -   id: black
 
-    #    -   repo: https://github.com/pycqa/isort
-    #        rev: 6.0.1
-    #        hooks:
-    #            -   id: isort
+    -   repo: https://github.com/pycqa/isort
+        rev: 6.0.1
+        hooks:
+            -   id: isort
 
     -   repo: https://github.com/pycqa/flake8
         rev: 7.2.0
