--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,57 @@
-# pyproject.toml
-
-# Specifies the build system (optional if you don't build/distribute the package, but good practice)
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
-# Basic project metadata (optional, but recommended for clarity)
-# Fill these out with your actual project details
 [project]
-name = "ledgerbase" # Or your actual project name
-version = "0.1.0"    # Start with an initial version
-description = "Description of your LedgerBase project."
-requires-python = ">=3.8" # Set your minimum supported Python version
-# You can also list dependencies here if you structure your project as an installable package
-# dependencies = [
-#     "Flask>=2.0",
-#     "Flask-SQLAlchemy",
-#     "cryptography",
-#     "python-dotenv",
-#     "sentry-sdk[flask]",
-#     "marshmallow",
-#     "Flask-Limiter",
-#     # Add other runtime dependencies
-# ]
+name = "ledgerbase"
+version = "0.1.0"
+description = "A financial ledger and budgeting application."
+requires-python = ">=3.11"
 
-# Configuration for the 'black' code formatter
+dependencies = [
+    "Flask>=3.0.3",
+    "Flask-SQLAlchemy>=3.1.1",
+    "cryptography>=42.0.5",
+    "python-dotenv>=1.0.1",
+    "sentry-sdk[flask]>=2.2.0",
+    "marshmallow>=3.21.2",
+    "Flask-Limiter>=3.5.0",
+    "gunicorn>=21.2.0",
+    "psycopg[binary]>=3.1.18",
+    "python-dateutil>=2.9.0.post0",
+    "plaid-python>=15.6.0",
+    "PyYAML>=6.0.1"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.2.0",
+    "pre-commit>=3.7.0",
+    "flake8>=7.0.0",
+    "black>=24.4.2",
+    "isort>=5.13.2"
+]
+
+[project.authors]
+name = "Byron Williams"
+# email = "your.email@example.com"
+
+[project.license]
+text = "MIT"
+
+# [project.urls]
+# homepage = "https://github.com/williaby/ledgerbase"
+# documentation = "https://github.com/williaby/ledgerbase/wiki"
+# repository = "https://github.com/williaby/ledgerbase"
+
+# [project.classifiers]
+# "Programming Language :: Python :: 3.11",
+# "License :: OSI Approved :: MIT License",
+# "Operating System :: OS Independent",
+
 [tool.black]
-line-length = 88 # A common line length, often used with flake8 default
+line-length = 88  # A common line length, often used with flake8 default
 
-# Configuration for the 'isort' import sorter
 [tool.isort]
-profile = "black" # <--- This is the crucial line for compatibility
-# isort will automatically use the line_length defined in [tool.black] if present
+profile = "black"  # Crucial line for compatibility with black formatter
+
+[tool.flake8]
+max-line-length = 88
+exclude = [".git", "__pycache__", "build", "dist"]
+extend-ignore = ["E203", "W503"]
