--- a/.github/workflows/dev-checks.yml
+++ b/.github/workflows/dev-checks.yml
@@ -7,42 +7,29 @@ on:
         branches: [ main ]
 
 jobs:
-    lint-test:
-        name: Lint, Type Check, Format
+    dev-checks:
         runs-on: ubuntu-latest
 
         steps:
-            -   name: Checkout Code
-                uses: actions/checkout@v4
+            -   uses: actions/checkout@v4
 
-            -   name: Set up Python
-                uses: actions/setup-python@v5
-                with:
-                    python-version: '3.12'
+            -   name: Install Poetry
+                run: curl -sSL https://install.python-poetry.org | python3 -
 
-            -   name: Install dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install -r requirements.txt
-                    pip install \
-                      black \
-                      isort \
-                      flake8 \
-                      mypy \
-                      bandit \
-                      types-requests
+            -   name: Install project dependencies (including dev)
+                run: poetry install
 
             -   name: Run Black
-                run: black --check --config setup.cfg .
+                run: poetry run black --check .
 
             -   name: Run isort
-                run: isort --check-only --settings-path setup.cfg .
+                run: poetry run isort --check-only .
 
-            -   name: Run flake8
-                run: flake8 --config=setup.cfg .
+            -   name: Run Flake8
+                run: poetry run flake8 .
 
-            -   name: Run mypy
-                run: mypy --config-file setup.cfg .
+            -   name: Run Mypy
+                run: poetry run mypy .
 
-            -   name: Run Bandit (security linter)
-                run: bandit -r . -x tests --skip B101
+            -   name: Run Bandit
+                run: poetry run bandit -r app/
