--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,15 @@
+default_stages: [ commit ]
+exclude: |
+    (?x)^(
+      \.venv/|
+      \.idea/|
+      dist/|
+      build/|
+      migrations/|
+      .*\.sqlite|
+      tests/
+    )
+
 repos:
     -   repo: https://github.com/psf/black
         rev: 25.1.0
@@ -13,14 +25,17 @@ repos:
         rev: 7.2.0
         hooks:
             -   id: flake8
+                additional_dependencies:
+                    - flake8
+                    - flake8-bandit
 
     -   repo: https://github.com/pre-commit/mirrors-mypy
-        rev: v1.15.0 # Or stick with v1.9.0 if you prefer, just be consistent
+        rev: v1.15.0
         hooks:
             -   id: mypy
-                additional_dependencies: # <-- ADD THIS SECTION
-                    - Flask              # <-- Add Flask
-                    - types-Flask        # <-- Add Flask type stubs
+                additional_dependencies:
+                    - Flask
+                    - types-Flask
                     - pydantic
 
     -   repo: https://github.com/PyCQA/bandit
@@ -39,10 +54,10 @@ repos:
             -   id: name-tests-test
             -   id: requirements-txt-fixer
 
-    #  - repo: https://github.com/asottile/reorder_python_imports
-    #    rev: v3.10.0
-    #    hooks:
-    #      - id: reorder-python-imports
+    # - repo: https://github.com/asottile/reorder_python_imports
+    #   rev: v3.10.0
+    #   hooks:
+    #     - id: reorder-python-imports
 
     -   repo: https://github.com/Yelp/detect-secrets
         rev: v1.5.0
