--- a/.github/workflows/security-snyk.yml
+++ b/.github/workflows/security-snyk.yml
@@ -26,8 +26,8 @@ jobs:
 
             -   name: Install dependencies
                 run: |
-                    python -m pip install --upgrade pip
-                    pip install -r requirements.txt
+                    poetry install --no-interaction --no-root
+
 
             -   name: Run Snyk to check for vulnerabilities
                 uses: snyk/actions/python@0.3.0
