--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ isort = "5.13.2"
 mypy = "^1.9.0"
 bandit = "^1.7.8"
 types-requests = "^2.31.0.10"
+nox = "^2025.2.9"
 
 [tool.black]
 line-length = 88
@@ -46,6 +47,7 @@ skip_gitignore = true
 [tool.flake8]
 max-line-length = 120
 exclude = [
+    ".nox",
     ".git",
     "__pycache__",
     "build",
