--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/
 !.secrets.template  # if you want a sample .secrets file
 
 # Security baselines
-.secrets.baseline
+# .secrets.baseline
 .security.baseline
 
 # Act-specific override
