--- a/.github/workflows/templates/nox-template-matrix.yml
+++ b/.github/workflows/templates/nox-template-matrix.yml
@@ -1,54 +1,65 @@
-name: Nox Matrix Session Runner
+name: Nox Matrix Test
+
+# This is a reusable matrix workflow for running named Nox sessions.
 
 on:
-    workflow_call:
-        inputs:
-            sessions:
-                required: true
-                type: string
-                description: Comma-separated list of Nox sessions to run (e.g., "lint,tests,sbom")
+  workflow_call:
+    inputs:
+      session:
+        required: true
+        type: string
+      python-version:
+        required: false
+        type: string
+        default: "3.11"
 
 jobs:
-    get-matrix:
-        runs-on: ubuntu-latest
-        outputs:
-            matrix: ${{ steps.set-matrix.outputs.matrix }}
-        steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v4
+  nox-matrix:
+    name: Run ${{ inputs.session }} on Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
 
-            -   name: Read python-version-matrix.yml
-                id: set-matrix
-                run: |
-                    matrix=$(yq -o=json '.python-version-matrix' .github/workflows/ci/python-version-matrix.yml)
-                    echo "matrix=${matrix}" >> "$GITHUB_OUTPUT"
+    strategy:
+      matrix:
+        python-version: ${{ fromJson(inputs.python-version) }}
 
-    prepare:
-        uses: .github/workflows/templates/prepare-poetry.yml
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.0
 
-    run-nox:
-        name: Run Nox Session
-        needs: [ get-matrix, prepare ]
-        runs-on: ubuntu-latest
-        strategy:
-            fail-fast: false
-            matrix:
-                python-version: ${{ fromJson(needs.get-matrix.outputs.matrix) }}
+      - name: Load Python versions from config (if not overridden)
+        if: inputs.python-version == '3.11'
+        id: load-versions
+        run: |
+          VERSIONS=$(jq -c .python_versions .github/workflows/templates/python-versions.json)
+          echo "matrix=${VERSIONS}" >> $GITHUB_OUTPUT
 
-        steps:
-            -   name: Checkout repository
-                uses: actions/checkout@v4
+      - name: Set dynamic matrix if default is used
+        if: inputs.python-version == '3.11'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const matrix = process.env.matrix;
+            core.setOutput('python-version', matrix);
 
-            -   name: Set up Python
-                uses: actions/setup-python@v4
-                with:
-                    python-version: ${{ matrix.python-version }}
+      - name: Set up Python
+        uses: actions/setup-python@v4.8.0
+        with:
+          python-version: ${{ matrix.python-version }}
 
-            -   name: Upgrade pip and install Nox
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install nox
+      - name: Cache Poetry + pip + .nox
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.cache/pip
+            .nox
+          key: ${{ runner.os }}-nox-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-nox-${{ matrix.python-version }}-
 
-            -   name: Run Nox sessions
-                run: |
-                    nox -s ${{ inputs.sessions }}
+      - name: Install Nox
+        run: python -m pip install --upgrade nox
+
+      - name: Run Nox session
+
+        run: nox -s ${{ inputs.session }}
