--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
-end_of_line = lf
+end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
@@ -13,4 +13,10 @@ max_line_length = 88 # Use 88 for black, or 79 for flake8 strict
 trim_trailing_whitespace = false
 
 [*.py]
-max_line_length = 88
+indent_style = space
+indent_size = 4
+max_line_length = 88 # Align with Python style tools
+
+[*.json]
+indent_style = space
+indent_size = 2
