--- a/.github/workflows/cd/auto-merge.yml
+++ b/.github/workflows/cd/auto-merge.yml
@@ -1,36 +1,26 @@
-name: Auto-Merge PRs
+name: Dependabot Auto-Merge
 
 on:
-    pull_request:
-        types: [ labeled ]
+  pull_request:
+    types: [opened, labeled, synchronize]
 
 permissions:
-    pull-requests: write
-    contents: read
+  contents: write
+  pull-requests: write
 
 jobs:
-    auto-merge:
-        if: ${{ github.event.label.name == 'status:auto-approved' && (github.actor == 'dependabot[bot]' || github.actor == 'renovate[bot]') }}
-        runs-on: ubuntu-latest
+  auto-merge:
+    if: github.actor == 'dependabot[bot]'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Approve the PR
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        steps:
-            -   name: Enable auto-merge
-                uses: actions/github-script@v7
-                with:
-                    script: |
-                        try {
-                          const pr = context.payload.pull_request;
-                          if (!pr) {
-                            throw new Error("No pull request found in the payload.");
-                          }
-
-                          console.log(`Merging PR #${pr.number} from ${pr.user.login}`);
-                          await github.rest.pulls.merge({
-                            owner: context.repo.owner,
-                            repo: context.repo.repo,
-                            pull_number: pr.number,
-                            merge_method: "squash"
-                          });
-                        } catch (error) {
-                          core.setFailed(`❌ Failed to merge PR: ${error.message}`);
-                        }
+      - name: Enable auto-merge
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
