--- a/.github/workflows/templates/security-checks.yml
+++ b/.github/workflows/templates/security-checks.yml
@@ -88,6 +88,7 @@ jobs:
           name: sarif-${{ matrix.session }}-${{ matrix.python-version }}
           path: |
             *.sarif
+          retention-days: 2
 
   run-override:
     if: inputs.python-version != '3.11'
@@ -147,3 +148,4 @@ jobs:
           name: sarif-${{ matrix.session }}-${{ matrix.python-version }}
           path: |
             *.sarif
+          retention-days: 2
