--- a/.github/workflows/templates/security-pip-audit.yml
+++ b/.github/workflows/templates/security-pip-audit.yml
@@ -1,10 +1,4 @@
-name: Security - Safety
-
-on:
-    pull_request:
-        branches: [ main ]
-    push:
-        branches: [ main ]
+name: Security - pip-audit
 
 permissions:
     contents: read
@@ -12,10 +6,9 @@ permissions:
     pull-requests: write
 
 jobs:
-    safety:
-        name: Run Safety security scan
+    pip-audit:
+        name: Run pip-audit security scan
         runs-on: ubuntu-22.04
-
         steps:
             -   name: Checkout repository
                 uses: actions/checkout@v4.1.0
@@ -25,52 +18,52 @@ jobs:
                 with:
                     python-version: "3.12"
 
-            -   name: Install Safety
+            -   name: Install pip-audit
                 run: |
                     python -m pip install --upgrade pip
-                    pip install safety
+                    pip install pip-audit
 
-            -   name: Run Safety scan
+            -   name: Run pip-audit
                 run: |
-                    safety check --full-report --json > safety_output.json
+                    pip-audit --output pip-audit-results.json --format json
 
-            -   name: Verify output exists
+            -   name: Verify pip-audit results file exists
                 run: |
-                    if [ ! -f safety_output.json ]; then
-                      echo "::error::safety_output.json not found!"
+                    if [ ! -f pip-audit-results.json ]; then
+                      echo "::error::pip-audit-results.json not found!"
                       exit 1
                     fi
 
-            -   name: Count high or critical vulnerabilities
+            -   name: Count high-severity issues
                 id: count
                 run: |
-                    high=$(jq '[.vulnerabilities[] | select(.severity == "high" or .severity == "critical")] | length' safety_output.json)
+                    high=$(jq '[.[] | select(.vulns[]?.severity == "high" or .vulns[]?.severity == "critical")] | length' pip-audit-results.json)
+                    echo "High/critical issues: $high"
                     echo "vulns=$high" >> $GITHUB_OUTPUT
-                    echo "Found $high high/critical vulnerabilities"
 
-            -   name: Upload Safety report
+            -   name: Upload audit results
                 uses: actions/upload-artifact@v3
                 with:
-                    name: safety-report
-                    path: safety_output.json
+                    name: pip-audit-results
+                    path: pip-audit-results.json
 
             -   name: Convert to SARIF
                 run: |
-                    pip install safety-sarif
-                    safety-sarif safety_output.json > safety.sarif
+                    pip install pip-audit-sarif
+                    pip-audit-sarif --input pip-audit-results.json --output pip-audit-results.sarif
 
             -   name: Upload SARIF to GitHub Security tab
                 uses: github/codeql-action/upload-sarif@v3.24.9
                 with:
-                    sarif_file: safety.sarif
+                    sarif_file: pip-audit-results.sarif
 
-            -   name: Fail on high/critical issues
+            -   name: Fail if high-severity issues found
                 if: steps.count.outputs.vulns != '0'
                 run: |
-                    echo "::error::Safety scan found ${{ steps.count.outputs.vulns }} high/critical issues"
+                    echo "::error::pip-audit found ${{ steps.count.outputs.vulns }} high or critical vulnerabilities"
                     exit 1
 
-            -   name: Label PR if issues found
+            -   name: Label PR on issues
                 if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
                 uses: actions/github-script@v7.1.0
                 with:
@@ -84,5 +77,5 @@ jobs:
                           owner: context.repo.owner,
                           repo: context.repo.repo,
                           issue_number: pr.number,
-                          labels: ['security:safety']
+                          labels: ['security:pip-audit']
                         });
